feat: Phase 1 Foundation - Robust learning infrastructure with quota, mode control, PII masking, lineage
**Infrastructure Services**
- LearningActivityLogService: centralized audit trail for all learning ops (scraping, approvals, solutions)
- LearningQuotaService: configurable per-user & global daily limits with emergency threshold
- LearningModeControl: system-wide modes (AGGRESSIVE/BALANCED/MANUAL/PAUSED) + emergency stop
- ContentSanitizerService: PII masking (email, tokens, secrets) + toxic code scanning
- SolutionMemory lineage tracking: sourceUrl, sourceSite, sourceAuthority, extractedAt, validationStatus

**Pluggable Scraping Architecture**
- SiteExtractor interface - pluggable, per-site extraction logic
- WikipediaExtractor - authority 0.75, tech-filtered
- StackOverflowExtractor - authority 0.80, hot questions
- SourceAuthority enum - conflict resolution hierarchy (OFFICIAL_DOCS > GITHUB > SO > WIKI > BLOGS > FORUMS)

**Model Enhancements (SolutionMemory)**
- Versioning: version, previousVersionId, createUpdate() for rollback
- Obsolete flag: markObsolete(), soft-delete audit trail
- Timeless flag: exempt from recency decay
- Recency-based confidence decay (exp decay, half-life ~693 days)
- Lineage metadata: sourceUrl, sourceSite, sourceAuthority, extractedAt, extractedBy, validationStatus

**Admin APIs**
- LearningAdminController: /api/admin/learning/*
  - GET status: mode + quota + health
  - POST mode: set learning aggression level
  - POST emergency-pause / resume
  - POST quota: update daily limits
  - GET quota: current usage stats
  - POST trigger: manual learning cycle

**AdminDashboardController Extensions**
- POST /api/admin/knowledge/obsolete/{solutionId} - soft-delete solutions (unlearn)
- Injected SolutionMemoryRepository for obsolete operations

**GlobalKnowledgeBase Updates**
- Filters obsolete solutions from queries
- Version-aware updates (create new version instead of in-place)
- Source authority support (future conflict resolution)

**Bui